[gd_scene load_steps=2 format=3 uid="uid://lg71e63pa16b"]

[ext_resource type="Script" uid="uid://d1vkt4sg2yndw" path="res://components/world_info_view/vulnerability_container.gd" id="1_6gtrb"]

[node name="VulnerabilityContainer" type="VBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_6gtrb")

[node name="VulnerabilityTypeContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VulnerabilityTypeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6
text = "Vulnerability Type"

[node name="VulnerabilityTypeLineEdit" type="LineEdit" parent="VulnerabilityTypeContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="IsRemoteCheckBox" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Is Remote?"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HackResultContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HackResultContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6
text = "Hack Result"

[node name="HackResultLineEdit" type="LineEdit" parent="HackResultContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="RandomPathContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="RandomPathLabel" type="Label" parent="RandomPathContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6
text = "Random Path"

[node name="RandomPathLineEdit" type="LineEdit" parent="RandomPathContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="PathExistContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PathExistLabel" type="Label" parent="PathExistContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6
text = "Path Exists"

[node name="PathExistLineEdit" type="LineEdit" parent="PathExistContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="PermissionContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="PermissionContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6
text = "Permission Granted"

[node name="PermissionLineEdit" type="LineEdit" parent="PermissionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="NumberRegisterUserContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NumberRegisterUserLabel" type="Label" parent="NumberRegisterUserContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6
text = "Registered User Count"

[node name="NumberRegisterUserLineEdit" type="LineEdit" parent="NumberRegisterUserContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="NumberPortForwardContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NumberPortForwardLabel" type="Label" parent="NumberPortForwardContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6
text = "Port Forwarded Count"

[node name="NumberPortForwardLineEdit" type="LineEdit" parent="NumberPortForwardContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="NumberConnectionGatewayContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NumberConnectionGatewayLabel" type="Label" parent="NumberConnectionGatewayContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6
text = "Gateway Connections"

[node name="NumberConnectionGatewayLineEdit" type="LineEdit" parent="NumberConnectionGatewayContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="NumberConnectionGatewayContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="GuestUserLoginLabel" type="Label" parent="NumberConnectionGatewayContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Guest User Login"

[node name="RootUserLoginLabel" type="Label" parent="NumberConnectionGatewayContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Root User Login"

[node name="AnyUserLoginLabel" type="Label" parent="NumberConnectionGatewayContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Any User Login"

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="UnsecuredValueContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="UnsecuredValueContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6
text = "Unsecured Value"

[node name="UnsecuredValueLineEdit" type="LineEdit" parent="UnsecuredValueContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="UnsecuredDetailContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="UnsecuredDetailContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6
text = "Unsecured Detail"

[node name="UnsecuredDetailLineEdit" type="LineEdit" parent="UnsecuredDetailContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="RequiredLibraryContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="RequiredLibraryLabel" type="Label" parent="RequiredLibraryContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6
text = "Required Library"

[node name="HBoxContainer" type="HBoxContainer" parent="RequiredLibraryContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RequiredLibraryLineEdit" type="LineEdit" parent="RequiredLibraryContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="RequiredLibraryVersionLineEdit" type="LineEdit" parent="RequiredLibraryContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="MetaxploitVersionContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="MetaxploitVersionContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6
text = "Metaxploit Version"

[node name="MetaxploitVersionLineEdit" type="LineEdit" parent="MetaxploitVersionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false
