# ------------------------------------------------
# Class Name: VulnerabilityContainer
# Class Description:
# ------------------------------------------------
class_name VulnerabilityContainer extends VBoxContainer

@onready var vulnerability_type_line_edit: LineEdit = %VulnerabilityTypeLineEdit

@onready var hack_result_line_edit: LineEdit = %HackResultLineEdit
@onready var random_path_line_edit: LineEdit = %RandomPathLineEdit
@onready var path_exist_line_edit: LineEdit = %PathExistLineEdit
@onready var permission_line_edit: LineEdit = %PermissionLineEdit
@onready var number_register_user_line_edit: LineEdit = %NumberRegisterUserLineEdit
@onready var number_port_forward_line_edit: LineEdit = %NumberPortForwardLineEdit
@onready var number_connection_gateway_line_edit: LineEdit = %NumberConnectionGatewayLineEdit

@onready var guest_user_login_label: Label = %GuestUserLoginLabel
@onready var root_user_login_label: Label = %RootUserLoginLabel
@onready var any_user_login_label: Label = %AnyUserLoginLabel

@onready var unsecured_value_line_edit: LineEdit = %UnsecuredValueLineEdit
@onready var unsecured_detail_line_edit: LineEdit = %UnsecuredDetailLineEdit
@onready var required_library_line_edit: LineEdit = %RequiredLibraryLineEdit
@onready var required_library_version_line_edit: LineEdit = %RequiredLibraryVersionLineEdit
@onready var metaxploit_version_line_edit: LineEdit = %MetaxploitVersionLineEdit

@onready var is_remote_check_box: CheckBox = %IsRemoteCheckBox

@onready var random_path_label: Label = %RandomPathLabel
@onready var path_exist_label: Label = %PathExistLabel
@onready var number_register_user_label: Label = %NumberRegisterUserLabel
@onready var number_port_forward_label: Label = %NumberPortForwardLabel
@onready var number_connection_gateway_label: Label = %NumberConnectionGatewayLabel
@onready var required_library_label: Label = %RequiredLibraryLabel

func load_vulnerability_contents(vulnerability: Vulnerability):
	vulnerability_type_line_edit.text = VulnerabilityType.translate(vulnerability.type_vulner)
	hack_result_line_edit.text = HackResultType.translate(vulnerability.helper_hack_result.hack_result)
	random_path_line_edit.text = vulnerability.helper_hack_result.random_path
	change_label_color(HackRequiredType.Type.PATH_EXIST, vulnerability, path_exist_label)
	path_exist_line_edit.text = vulnerability.helper_hack_result.path_exist
	permission_line_edit.text = vulnerability.helper_hack_result.user
	change_label_color(HackRequiredType.Type.NUMBER_USERS_REGISTER, vulnerability, number_register_user_label)
	number_register_user_line_edit.text = str(vulnerability.helper_hack_result.num_register_users)
	change_label_color(HackRequiredType.Type.PORT_FORWARD, vulnerability, number_port_forward_label)
	number_port_forward_line_edit.text = str(vulnerability.helper_hack_result.num_port_forward)
	change_label_color(HackRequiredType.Type.CONN_GATEWAY, vulnerability, number_connection_gateway_label)
	number_connection_gateway_line_edit.text = str(vulnerability.helper_hack_result.num_conn_gateway)
	change_label_color(HackRequiredType.Type.GUEST_ACTIVE_USER, vulnerability, guest_user_login_label)
	change_label_color(HackRequiredType.Type.ANY_ACTIVE_USER, vulnerability, any_user_login_label)
	change_label_color(HackRequiredType.Type.ROOT_ACTIVE_USER, vulnerability, root_user_login_label)
	unsecured_value_line_edit.text = vulnerability.unsec_value
	unsecured_detail_line_edit.text = vulnerability.details
	change_label_color(HackRequiredType.Type.LIBRARY, vulnerability, required_library_label)
	required_library_line_edit.text = LibraryType.translate(vulnerability.required_lib)
	required_library_version_line_edit.text = vulnerability.req_lib_version
	metaxploit_version_line_edit.text = vulnerability.metaxploit_version.version_str
	is_remote_check_box.button_pressed = vulnerability.is_remote

func reset_vulnerability_contents():
	vulnerability_type_line_edit.text = ""
	hack_result_line_edit.text = ""
	random_path_line_edit.text = ""
	path_exist_line_edit.text = ""
	permission_line_edit.text = ""
	number_register_user_line_edit.text = ""
	number_port_forward_line_edit.text = ""
	number_connection_gateway_line_edit.text = ""
	unsecured_value_line_edit.text = ""
	unsecured_detail_line_edit.text = ""
	required_library_line_edit.text = ""
	required_library_version_line_edit.text = ""
	metaxploit_version_line_edit.text = ""
	is_remote_check_box.button_pressed = false
	path_exist_label.remove_theme_color_override("font_color")
	number_register_user_label.remove_theme_color_override("font_color")
	number_port_forward_label.remove_theme_color_override("font_color")
	number_connection_gateway_label.remove_theme_color_override("font_color")
	guest_user_login_label.remove_theme_color_override("font_color")
	any_user_login_label.remove_theme_color_override("font_color")
	root_user_login_label.remove_theme_color_override("font_color")
	required_library_label.remove_theme_color_override("font_color")
	required_library_line_edit.remove_theme_color_override("font_color")

"""
If HackRequiredType.Type in vulnerability.required_action
change the label control font color to red
else
back to normal
"""
func change_label_color(action: HackRequiredType.Type, vulnerability: Vulnerability, label: Control) -> void:
	if action in vulnerability.required_actions:
		label.add_theme_color_override("font_color", Color(1, 1, 0))
	else:
		label.add_theme_color_override("font_color", Color(1, 1, 1))
